--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Stencil Component Starter</title>
 
-    <script type="module" src="/build/carib-ui.esm.js"></script>
-    <script nomodule src="/build/carib-ui.js"></script>
+    <script type="module" src="/build/cg-ui.esm.js"></script>
+    <script nomodule src="/build/cg-ui.js"></script>
   </head>
   <body style="padding: 5rem; display: flex; width: 100vw; justify-content: space-evenly">
     <cg-dropdown multiple>
